--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@ When I'm not coding or configuring cloud environments, you'll find me exploring 
                 <div class="about-item">
                     <div class="abt-text">
                       <p class="large-text">2023</p>
-                      <p class="small-text">Pursing master's <br/>in computer Apllication</p>
+                      <p class="small-text">Pursing Bacholar's <br/>in Computer Science And Engineering</p>
                     </div>
                 </div>
                 <div class="about-item">
                     <div class="abt-text">
-                      <p class="large-text">2021</p>
-                      <p class="small-text">Bachloer's<br/>in computer Application</p>
+                      <p class="large-text">2020</p>
+                      <p class="small-text">Diploma<br/>in Computer Engineering</p>
                     </div>
                 </div>
             </div>
@@ -96,12 +96,12 @@ When I'm not coding or configuring cloud environments, you'll find me exploring 
                     <div class="progress-con">
                         <p class="prog text">60%</p>
                         <div class="progress">
-                            <span class="c"></span>
+                            <span class="java"></span>
                         </div>
                     </div>
                 </div>
                 <div class="progress-bar">
-                    <div class="prog-title">C++</div>
+                    <div class="prog-title">cloud</div>
                     <div class="progress-con">
                         <p class="prog text">65%</p>
                         <div class="progress">
@@ -135,33 +135,33 @@ When I'm not coding or configuring cloud environments, you'll find me exploring 
                 <div class="tl-icon">
                     <i class="fas fa-briefcase"></i>
                 </div>
-                <p class="tl-duration">2019 - 2022</p>
-                <h5>Technical Support- <span>Toshani multi-brand trading Pvt. Ltd.</span></h5>
-                <p>* Provide Supoort for accounting software and tools <br>* Educated employees  on new feature capabilities</p>
+                <p class="tl-duration">2022 - 2023</p>
+                <h5>Technical Support- <span>Concentrix Service India Private Limitated</span></h5>
+                <p>* Provide Supoort Target Process in USA <br>* Manage the E-Commerce Technical Assistence</p>
             </div>
             <div class="timeline-item">
                 <div class="tl-icon">
                     <i class="fas fa-graduation-cap"></i>
                 </div>
                 <p class="tl-duration">2021 - 2023</p>
-                <h5>Pursuing Master's - <span>in Computer Application</span></h5>
-                <p>Rakshpal Bahdur Institute of Management, <br> <p>Bareilly</p></p>
+                <h5>Bacholars - <span>in Computer Science and Engineering</span></h5>
+                <p>Chandigarh University, <br> <p>Mohali</p></p>
             </div>
             <div class="timeline-item">
                 <div class="tl-icon">
                     <i class="fas fa-graduation-cap"></i>
                 </div>
-                <p class="tl-duration">2019 - 2022</p>
-                <h5>Technical Support- <span>Toshani multi-brand trading Pvt. Ltd.</span></h5>
-                <p>* Provide Supoort for accounting software and tools <br>* Educated employees  on new feature capabilities</p>
+                                <p class="tl-duration">2022 - 2023</p>
+                <h5>Technical Support- <span>Concentrix Service India Private Limitated</span></h5>
+                <p>* Provide Supoort Target Process in USA <br>* Manage the E-Commerce Technical Assistence</p>
             </div>
             <div class="timeline-item">
                 <div class="tl-icon">
                     <i class="fas fa-graduation-cap"></i>
                 </div>
-                <p class="tl-duration">2017 - 2021</p>
-                <h5>Bachloer's- <span>in Computer Application</span></h5>
-                <p>Bareilly collage,<br> Bareilly</p>
+                <p class="tl-duration">2020 - 2023</p>
+                <h5>Diploma- <span>in Computer Engineering</span></h5>
+                <p>DSEU Rajokari Campus,<br> New Delhi</p>
             </div>
         </div>
         </section>
