--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@ When I'm not coding or configuring cloud environments, you'll find me exploring 
                 </div>
                 <div class="about-item">
                     <div class="abt-text">
-                      <p class="large-text">2023</p>
+                      <p class="large-text">2023-2026</p>
                       <p class="small-text">Pursing Bacholar's <br/>in Computer Science And Engineering</p>
                     </div>
                 </div>
                 <div class="about-item">
                     <div class="abt-text">
-                      <p class="large-text">2020</p>
+                      <p class="large-text">2020-2023</p>
                       <p class="small-text">Diploma<br/>in Computer Engineering</p>
                     </div>
                 </div>
@@ -92,7 +92,7 @@ When I'm not coding or configuring cloud environments, you'll find me exploring 
             <h4 class="stat-title">My skills</h4>
             <div class="progress-bars">
                 <div class="progress-bar">
-                    <div class="prog-title">C Language</div>
+                    <div class="prog-title">Java Language</div>
                     <div class="progress-con">
                         <p class="prog text">60%</p>
                         <div class="progress">
@@ -143,7 +143,7 @@ When I'm not coding or configuring cloud environments, you'll find me exploring 
                 <div class="tl-icon">
                     <i class="fas fa-graduation-cap"></i>
                 </div>
-                <p class="tl-duration">2021 - 2023</p>
+                <p class="tl-duration">2020 - 2023</p>
                 <h5>Bacholars - <span>in Computer Science and Engineering</span></h5>
                 <p>Chandigarh University, <br> <p>Mohali</p></p>
             </div>
