--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ When I'm not coding or configuring cloud environments, you'll find me exploring 
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: demo@gmail.com</span>
+                                    <span>: subhranshakash@gmail.com</span>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -280,10 +280,10 @@ When I'm not coding or configuring cloud environments, you'll find me exploring 
                                 <a href="https://twitter.com/Praveen123133" target="_blank">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="https://github.com/Mishraji566" target="_blank">
+                                <a href="https://github.com/akashsubhransh12" target="_blank">
                                     <i class="fab fa-github"></i>
                                 </a>
-                                <a href="https://www.linkedin.com/in/mishraji566/" target="_blank">
+                                <a href="www.linkedin.com/in/asubhransh" target="_blank">
                                     <i class="fab fa-linkedin"></i>
                                 </a>
 
